Code quality improvements and debug Javadoc added